--- a/toyou/app/src/main/res/drawable/confirm_button_click.xml
+++ b/toyou/app/src/main/res/drawable/confirm_button_click.xml
@@ -10,4 +10,9 @@
             <solid android:color="@color/colorPrimary"></solid>
         </shape>
     </item>
+    <item android:state_pressed="true">
+        <shape>
+            <solid android:color="@color/colorPrimary"></solid>
+        </shape>
+    </item>
 </selector>
