--- a/toyou/app/src/main/res/layout/main_sliding_inner.xml
+++ b/toyou/app/src/main/res/layout/main_sliding_inner.xml
@@ -8,6 +8,16 @@
     android:layout_height="400dp">
 
 
+    <ImageView
+        android:id="@+id/calendarImage"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/endButton"
+        app:srcCompat="@drawable/calendar" />
+
     <Button
         android:id="@+id/confirmButton"
         android:layout_width="match_parent"
@@ -71,18 +81,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:gravity="center"
-        android:text="시간 -> "
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
     <EditText
         android:id="@+id/titleText"
         android:layout_width="match_parent"
@@ -103,10 +101,10 @@
         android:id="@+id/timerImage"
         android:layout_width="36dp"
         android:layout_height="35dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/timer_click"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleText"
         app:srcCompat="@drawable/clock" />
 
@@ -119,7 +117,7 @@
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="70dp"
         android:gravity="top"
-        android:text="자세한 내용을 입력해주세요(생략가능)"
+        android:hint="자세한 내용을 입력해주세요(생략가능)"
         app:layout_constraintBottom_toTopOf="@+id/confirmButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -127,32 +125,16 @@
         app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <TextView
-        android:id="@+id/addressText"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="18dp"
-        android:gravity="center_vertical"
-        android:text="Toyou"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/timeText"
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:layout_marginStart="130dp"
+        android:layout_marginStart="85dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:gravity="center_vertical"
         android:text="시간 설정 해주세요"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/timerImage"
         app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <Button
