--- a/toyou/app/src/main/res/layout/item_day.xml
+++ b/toyou/app/src/main/res/layout/item_day.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="model"
-            type="com.example.toyou.ui.CalendarViewModel" />
+            type="com.rlqja.toyou.ui.CalendarViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,34 +18,35 @@
         >
 
         <LinearLayout
+            android:id="@+id/calendarLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:orientation="vertical"
-            app:layout_constraintDimensionRatio="2:3"
-            android:id="@+id/calendarLayout"
             android:background="@drawable/calendar_sample"
-            >
+            android:orientation="vertical"
+            app:layout_constraintDimensionRatio="5:9"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints">
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                >
-            </View>
+                android:layout_height="1dp"></View>
+
             <TextView
-                setDayText="@{model.MCalendar}"
                 android:id="@+id/dayText"
-                android:gravity="center"
+                setDayText="@{model.MCalendar}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
+                android:gravity="center"
                 android:textSize="12sp"
                 tools:text="1" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:id="@+id/dailyRecyclerView"
-                ></androidx.recyclerview.widget.RecyclerView>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
 
 
         </LinearLayout>
