--- a/toyou/app/src/main/res/layout/transfer_list_activity.xml
+++ b/toyou/app/src/main/res/layout/transfer_list_activity.xml
@@ -50,26 +50,24 @@
         android:id="@+id/backPressed"
         android:layout_width="42dp"
         android:layout_height="40dp"
-        android:layout_marginStart="50dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="10dp"
         android:background="?attr/homeAsUpIndicator"
-        app:layout_constraintStart_toStartOf="parent"
         sothree:layout_constraintEnd_toStartOf="@+id/StartText"
         sothree:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/transferRecyclerview"
-        android:layout_width="344dp"
-        android:layout_height="446dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        sothree:layout_constraintEnd_toEndOf="parent"
-        sothree:layout_constraintStart_toStartOf="parent"
-        sothree:layout_constraintTop_toBottomOf="@+id/endText"
-        sothree:layout_constraintVertical_bias="0.364" />
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/transferRecyclerview"-->
+<!--        android:layout_width="344dp"-->
+<!--        android:layout_height="446dp"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:layout_marginTop="30dp"-->
+<!--        android:layout_marginEnd="10dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        sothree:layout_constraintEnd_toEndOf="parent"-->
+<!--        sothree:layout_constraintStart_toStartOf="parent"-->
+<!--        sothree:layout_constraintTop_toBottomOf="@+id/endText"-->
+<!--        sothree:layout_constraintVertical_bias="0.364" />-->
 
     <ImageView
         android:id="@+id/imageView2"
@@ -81,8 +79,34 @@
         sothree:layout_constraintTop_toBottomOf="@+id/StartText"
         sothree:srcCompat="@drawable/go" />
 
+    <WebView
+        android:id="@+id/transferWebView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/endText" />
 
+<!--    <RadioGroup-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="180dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
 
+<!--        <RadioButton-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"-->
+<!--            android:text="대중교통" />-->
+
+<!--    </RadioGroup>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
     <LinearLayout
         android:layout_width="match_parent"
