--- a/toyou/app/src/main/res/menu/navi_menu.xml
+++ b/toyou/app/src/main/res/menu/navi_menu.xml
@@ -11,11 +11,11 @@
         </item>
     <item
         android:id="@+id/Setting"
-        android:title="설정" >
+        android:title="카카오 공유하기" >
     </item>
     <item android:title="공지사항"
         android:id="@+id/Notification"
         >
     </item>
-    </group>>
+    </group>
 </menu>
